--- a/code/sandbox_ra/20201222-Bisque/b_bisque.html
+++ b/code/sandbox_ra/20201222-Bisque/b_bisque.html
@@ -382,12 +382,13 @@ summary {
 <div id="pertinent-links" class="section level2">
 <h2>Pertinent links</h2>
 <ul>
-<li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/code/sandbox_ra/20201222-Bisque">Source code</a></p></li>
+<li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/code/sandbox_ra/20201222-Bisque">Source code</a>, short link: <a href="http://bit.ly/b_bisque">http://bit.ly/b_bisque</a></p></li>
 <li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/data/20201128-FGCZ">FGCZ bulk dataset</a></p></li>
 <li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/data/20201206-RefDatasets/2015-Darmanis">Darmanis et al (2015)</a> scRNA dataset</p></li>
 <li><p><a href="https://portal.brain-map.org/atlases-and-data/rnaseq/human-m1-10x">Allen Brain M1</a> scRNA dataset</p></li>
 <li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/code/sandbox_ra/20201220-Darmanis_vs_Allen">Analysis</a> of <strong>Darmanis et al</strong> in terms of <strong>Allen Brain M1</strong></p></li>
-<li><p>Bisque <a href="https://cran.r-project.org/web/packages/BisqueRNA/vignettes/bisque.html">vignette</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/BisqueRNA.pdf">reference</a>, <a href="https://rdrr.io/cran/BisqueRNA/src/R/reference_based.R">ReferenceBasedDecomposition</a>, <a href="https://cran.r-project.org/web/packages/limSolve/limSolve.pdf">limSolve</a></p></li>
+<li><p>Bisque <a href="https://www.nature.com/articles/s41467-020-15816-6">paper</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/vignettes/bisque.html">vignette</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/BisqueRNA.pdf">manual</a>, <a href="https://github.com/cozygene/bisque">github</a>, <a href="https://rdrr.io/cran/BisqueRNA/src/R/reference_based.R">ReferenceBasedDecomposition</a></p></li>
+<li><p>Bisque uses <a href="https://cran.r-project.org/web/packages/limSolve/limSolve.pdf">limSolve</a></p></li>
 </ul>
 </div>
 <div id="setup" class="section level2">
