--- a/code/sandbox_ra/20201222-Bisque/b_bisque.html
+++ b/code/sandbox_ra/20201222-Bisque/b_bisque.html
@@ -387,8 +387,8 @@ summary {
 <li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/data/20201206-RefDatasets/2015-Darmanis">Darmanis et al (2015)</a> reference scRNA dataset</p></li>
 <li><p><a href="https://portal.brain-map.org/atlases-and-data/rnaseq/human-m1-10x">Allen Brain M1</a> reference scRNA dataset</p></li>
 <li><p><a href="https://github.com/numpde/sta426_deconvo/tree/main/code/sandbox_ra/20201220-Darmanis_vs_Allen">Analysis</a> of <strong>Darmanis et al</strong> in terms of <strong>Allen Brain M1</strong></p></li>
-<li><p>Bisque <a href="https://www.nature.com/articles/s41467-020-15816-6">paper</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/vignettes/bisque.html">vignette</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/BisqueRNA.pdf">manual</a>, <a href="https://github.com/cozygene/bisque">github</a>, <a href="https://rdrr.io/cran/BisqueRNA/src/R/reference_based.R">ReferenceBasedDecomposition</a></p></li>
-<li><p>Bisque uses <a href="https://cran.r-project.org/web/packages/limSolve/limSolve.pdf">limSolve</a></p></li>
+<li><p>Bisque <a href="https://www.nature.com/articles/s41467-020-15816-6">paper</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/vignettes/bisque.html">vignette</a>, <a href="https://cran.r-project.org/web/packages/BisqueRNA/BisqueRNA.pdf">manual</a>, <a href="https://github.com/cozygene/bisque">github</a>, <a href="https://rdrr.io/cran/BisqueRNA/src/R/reference_based.R">ReferenceBasedDecomposition</a>; uses <a href="https://cran.r-project.org/web/packages/limSolve/limSolve.pdf">limSolve</a></p></li>
+<li><p>MuSiC <a href="https://www.nature.com/articles/s41467-018-08023-x">paper</a>, <a href="https://xuranw.github.io/MuSiC/articles/MuSiC.html">tutorial</a>, <a href="https://github.com/xuranw/MuSiC">github</a>, <a href="https://rdrr.io/github/xuranw/MuSiC/src/R/utils.R">music_prop</a></p></li>
 </ul>
 </div>
 <div id="preliminaries" class="section level2 tabset tabset-fade tabset-pills">
