new home for deco

--- a/code/sandbox_ra/20201222-Bisque/b_bisque.html
+++ b/code/sandbox_ra/20201222-Bisque/b_bisque.html
@@ -379,7 +379,9 @@ summary {
 </div>
 
 
-<p>The page has moved <a href="../20201226-AllDeco/deconvolution.html">HERE</a>.</p>
+<div id="the-page-has-moved-here" class="section level2">
+<h2>The page has moved <a href="../20201226-AllDeco/deconvolution.html">HERE</a></h2>
+</div>
 
 
 
